<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/HomeText"
        android:layout_width="374dp"
        android:layout_height="105dp"
        android:fontFamily="@font/abril_fatface"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:text="@string/HomeText"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="LabelFor,TextSizeCheck" />

    <ImageView
        android:id="@+id/lockImage"
        android:layout_width="52dp"
        android:layout_height="58dp"
        android:contentDescription="@string/app_name"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@android:drawable/ic_lock_lock"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/speechBubbleIcon"
        android:layout_width="115dp"
        android:layout_height="94dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@android:drawable/sym_action_chat"
        app:tint="@color/lightBlue"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/DecodeButton"
        android:layout_width="310dp"
        android:layout_height="118dp"
        android:background="@drawable/button_border"
        android:text="@string/DecodeButton"
        android:textColor="#40C4FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/EducationButton"
        android:layout_width="310dp"
        android:layout_height="118dp"
        android:background="@drawable/button_border"
        android:text="@string/EducationButton"
        android:textColor="#40C4FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/EncodeButton"
        android:layout_width="310dp"
        android:layout_height="118dp"
        android:background="@drawable/button_border"
        android:text="@string/EncodeButton"
        android:textColor="#40C4FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/homeIcon"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DecodeButton"
        app:layout_constraintVertical_bias="0.698"
        app:srcCompat="@drawable/home_icon"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DecodeButton"
        app:layout_constraintVertical_bias="0.698"
        app:srcCompat="@drawable/settings_transparent"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
