<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/HomeText"
        android:layout_width="374dp"
        android:layout_height="105dp"
        android:fontFamily="@font/abril_fatface"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:text="@string/Cryptography"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="LabelFor,TextSizeCheck" />

    <ImageView
        android:id="@+id/lockImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/app_name"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_lock_lock"
        app:tint="@color/lightBlue"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/homeIcon"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/settings_transparent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/education"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/glasses"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/black_border"/>

    <EditText
        android:id="@+id/decodeText"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/blank"
        android:hint="@string/EncodeText"
        android:textAlignment="center"
        android:background="@drawable/black_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <EditText
        android:id="@+id/encodeText"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="192dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/blank"
        android:hint="@string/DecodeText"
        android:textAlignment="center"
        android:background="@drawable/black_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/copy_button"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="192dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decodeText"
        app:srcCompat="?attr/actionModeCopyDrawable"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/paste_button"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/encodeText"
        app:layout_constraintTop_toBottomOf="@+id/spinner1"
        app:srcCompat="?attr/actionModePasteDrawable"
        app:tint="@color/black"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/swapbutton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/borders"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/encodeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decodeText"
        app:srcCompat="@drawable/double_arrows"
        app:tint="@color/black"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
