<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".encode_screen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="412dp"
        android:layout_height="56dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/HomeText"
        android:layout_width="392dp"
        android:layout_height="63dp"
        android:fontFamily="@font/abril_fatface"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:text="@string/Cryptography"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="LabelFor,TextSizeCheck" />

    <ImageView
        android:id="@+id/lockImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/app_name"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_lock_lock"
        app:tint="@color/lightBlue"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="13dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/settings_transparent"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/educationButton"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:padding="17dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/glasses"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/black_border"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/decodeText"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/black_border"
        android:ems="10"
        android:hint="@string/DecodeText"
        android:inputType="text"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/encodedText"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="192dp"
        android:autofillHints=""
        android:background="@drawable/black_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EncodeText"
        android:text="@string/blank"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/copy_button"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encodedText"
        app:srcCompat="?attr/actionModeCopyDrawable"
        app:tint="@color/black"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/paste_button"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginEnd="25dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EnterButton"
        app:srcCompat="?attr/actionModePasteDrawable"
        app:tint="@color/black"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/swapbutton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/borders"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:rotation="90"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/encodedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decodeText"
        app:srcCompat="@drawable/double_arrows"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/EnterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/borders"
        android:text="@string/Encrypt"
        app:layout_constraintStart_toStartOf="@+id/encodedText"
        app:layout_constraintTop_toBottomOf="@+id/decodeText" />


</androidx.constraintlayout.widget.ConstraintLayout>
